2013-01-27  Erwin Waterlander  <waterlan@xs4all.nl>

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 6.0.3.
	* mingw32/issue.log: Updated accordingly.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 6.0.3.
	* msys/issue.log: Updated accordingly.

2012-11-22  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish msys-core.

	* msys/msys-core.xml: Update to 1.0.18-1.
	* msys/issue.log: Updated accordingly.

2012-11-12  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-binutils.

	* mingw32/mingw32-binutils.xml: Update to 2.23.1-1.
	* mingw32/issue.log: Updated accordingly.

2012-11-05  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish mingw32-gcc4.

	* mingw32/mingw32-gcc4.xml: Update to 4.7.2-1.
	* mingw32/issue.log: Update accordingly.

2012-09-09  Erwin Waterlander  <waterlan@xs4all.nl>
	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 6.0.2.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 6.0.2.

2012-09-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add support files for git and Mercurial.

	* .gitignore .hgignore: New files.

2012-09-02  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-make.

	* mingw32/mingw32-make.xml: Update to 3.82.90-2-cvs-20120902.
	* mingw32/issue.log: Updated accordingly.

2012-08-27  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.

	* mingw32/mingw32-gdb.xml: Update to 7.5-1.
	* mingw32/issue.log: Updated accordingly.

2012-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-make.

	* mingw32/mingw32-make.xml: Update to 3.82.90-cvs-20120823-1.
	* mingw32/issue.log: Updated accordingly.

2012-07-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove redundant package names from description/title attributes.

	* mingw32/mingw32-autoconf.xml mingw32/mingw32-automake.xml:
	* mingw32/mingw32-basic-bsdtar.xml mingw32/mingw32-bzip2.xml: