@@ -31,7 +31,7 @@
   56b441272a03bc5ade62d4c7dc9595468baa922f 2012073100 msys-bash.xml
   e52982cbff0b0bb825461deb9af0411f72f2e4a2 2010090600 msys-binutils.xml
   098df570908eec421a271133cd0556f5894cce65 2012073100 msys-bison.xml
-  da2701ed54305ac41753fcc1d4cd8acbbf97ad64 2012073100 msys-bzip2.xml
+  a339eb6a797f2365119e4d2fd12c97ef50615dfc 2013020400 msys-bzip2.xml
   9fa0f6bc936b8fae418f79e38ecf31abb35ade20 2012073100 msys-console.xml
   ddfeed199d4857e2d14d9ee73a96786f14a37d7d 2012112200 msys-core.xml
   82080d78dce4eca134aa22803a3364ff04d3607c 2012073100 msys-coreutils.xml
