@@ -24,7 +24,12 @@
 
       <component class="bin">
         <release tarname="bzip2-1.0.5-2-msys-1.0.13-bin.tar.lzma" />
-        <release tarname="bzip2-1.0.6-1-msys-1.0.17-bin.tar.lzma" />
+        <release tarname="bzip2-1.0.6-1-msys-1.0.17-bin.tar.lzma">
+	  <!-- Contrary to the assertion below,
+	    this release DOES appear to require the DLL component
+            -->
+	  <requires eq="msys-libbz2-%-msys-%-dll-1.tar" />
+	</release>
 
         <!-- Every MSYS package requires msys-core-bin -->
         <requires eq="msys-core-*-msys-*-bin.tar" />
