@@ -1,3 +1,12 @@
+2012-09-07  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Add missing DLL dependency for msys-bzip2-bin.
+
+	* msys/msys-bzip2.xml (msys-bzip2-1.0.6-1-bin): Add dependency on...
+	(msys-libbz2-%-msys-%-dll-1.tar): ...this; publish it.
+
+	* msys/issue.log: Update accordingly.
+
 2013-01-27  Erwin Waterlander  <waterlan@xs4all.nl>
 
 	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 6.0.3.
